
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AR934X_RESET_ETH_SWITCH ;
 int AR934X_RESET_ETH_SWITCH_ANALOG ;
 int DELAY (int) ;
 int ar71xx_device_start (int ) ;
 int ar71xx_device_stop (int ) ;

__attribute__((used)) static void
ar934x_chip_reset_ethernet_switch(void)
{

 ar71xx_device_stop(AR934X_RESET_ETH_SWITCH);
 DELAY(100);
 ar71xx_device_start(AR934X_RESET_ETH_SWITCH);
 DELAY(100);
 ar71xx_device_stop(AR934X_RESET_ETH_SWITCH_ANALOG);
 DELAY(100);
 ar71xx_device_start(AR934X_RESET_ETH_SWITCH_ANALOG);
 DELAY(100);
}
