; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/atheros/extr_ar934x_chip.c_ar934x_chip_reset_ethernet_switch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/atheros/extr_ar934x_chip.c_ar934x_chip_reset_ethernet_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AR934X_RESET_ETH_SWITCH = common dso_local global i32 0, align 4
@AR934X_RESET_ETH_SWITCH_ANALOG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ar934x_chip_reset_ethernet_switch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar934x_chip_reset_ethernet_switch() #0 {
  %1 = load i32, i32* @AR934X_RESET_ETH_SWITCH, align 4
  %2 = call i32 @ar71xx_device_stop(i32 %1)
  %3 = call i32 @DELAY(i32 100)
  %4 = load i32, i32* @AR934X_RESET_ETH_SWITCH, align 4
  %5 = call i32 @ar71xx_device_start(i32 %4)
  %6 = call i32 @DELAY(i32 100)
  %7 = load i32, i32* @AR934X_RESET_ETH_SWITCH_ANALOG, align 4
  %8 = call i32 @ar71xx_device_stop(i32 %7)
  %9 = call i32 @DELAY(i32 100)
  %10 = load i32, i32* @AR934X_RESET_ETH_SWITCH_ANALOG, align 4
  %11 = call i32 @ar71xx_device_start(i32 %10)
  %12 = call i32 @DELAY(i32 100)
  ret void
}

declare dso_local i32 @ar71xx_device_stop(i32) #1

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @ar71xx_device_start(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
